--- a/src/styles/WhoWeAre.module.css
+++ b/src/styles/WhoWeAre.module.css
@@ -139,7 +139,7 @@
 
     font-family: 'Roboto Mono', monospace;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-size: 1.7rem;
+    font-size: 200%;
     font-weight: 500;
     padding-left: 5rem;
     padding-top: 2.5rem;
